[workspace]
members = ["bot", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
culpa = "1.0"
dotenv = "0.15"
entity = { version = "0.4", path = "./entity" }
fern = { version = "0.7", features = ["colored"] }
include_dir = { version = "0.7.4", features = ["glob", "nightly"] }
itertools = "0.14"
libbot = { path = "./lib" }
log = "0.4"
migration = { version = "0.4", path = "./migration" }
paste = "1"
# plurals = "0.3"
regex = "1"
riker = "0.4"
sea-orm = { version = "1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.17", features = ["macros"] }
tera = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
two_timer = "2.2" # doesn't parse "in 3 hours"
