[workspace]
members = ["bot", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
aegl_bot = { path = "./bot" }
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
culpa = "1.0"
dotenv = "0.15"
entity = { path = "./entity" }
fern = { version = "0.7", features = ["colored"] }
futures = "0.3"
include_dir = { version = "0.7.4", features = ["glob", "nightly"] }
itertools = "0.14"
kameo = "0.17"
libbot = { path = "./lib" }
log = "0.4"
migration = { path = "./migration" }
regex = "1"
sea-orm = { version = "1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.17", features = ["macros"] }
tera = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
two_timer = { version = "2.2", git = "https://github.com/berkus/two-timer.git", branch = "updated" }
