[workspace]
resolver = "2"
members = ["bot", "entity", "migration"]

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
culpa = "1.0"
dotenv = "0.15"
entity = { path = "./entity", version = "0.4" }
fern = { version = "0.7", features = ["colored"] }
futures = "0.3"
include_dir = { version = "0.7.4", features = ["glob", "nightly"] }
itertools = "0.14"
kameo = "0.18"
libbot = { path = "./lib" }
log = "0.4"
migration = { path = "./migration", version = "0.4" }
natural-date-parser = { git = "https://github.com/berkus/natural-date-parser", rev = "953d", version = "0.1.3" }
paste = "1"
# plurals = "0.3"
regex = "1"
sea-orm = { version = "1.1", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
] }
sea-orm-migration = { version = "1.1", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.17", features = ["macros"] }
tera = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
# debug = true # for instrumentation
