[package]
name = "aegl_bot"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
culpa.workspace = true
dotenv.workspace = true
entity.workspace = true
fern.workspace = true
futures.workspace = true
include_dir.workspace = true
itertools.workspace = true
kameo.workspace = true
libbot.workspace = true
log.workspace = true
migration.workspace = true
paste.workspace = true
regex.workspace = true
sea-orm.workspace = true
serde.workspace = true
teloxide.workspace = true
tera.workspace = true
tokio.workspace = true

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.17"
thousands = "0.2"
