[package]
name = "entity"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
culpa.workspace = true
dotenv.workspace = true
futures.workspace = true
libbot.workspace = true
regex.workspace = true
sea-orm.workspace = true
serde.workspace = true
tokio.workspace = true
