[package]
name = "libbot"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[lib]
name = "libbot"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
culpa.workspace = true
# entity.workspace = true
natural-date-rs.workspace = true
