[package]
name = "migration"
version = "0.4.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-time",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
